--- a/conflict_neg.bib
+++ b/conflict_neg.bib
@@ -1,201 +1,110 @@
 
-@book{lewicki_essentials_2016,
-	address = {Dubuque},
-	edition = {Sixth Edition},
-	title = {Essentials of negotiation},
-	isbn = {978-0-07-786246-6},
-	publisher = {McGraw-Hill Education},
-	author = {Lewicki, Roy J. and Barry, Bruce and Saunders, David M.},
-	year = {2016},
-	keywords = {Negotiation, Negotiation in business}
-}
-
-@misc{program_on_negotiation_three_2008,
-	title = {Three {Party} {Coalition} {Exercise} - {Game} {Theory} and {Negotiation} {Analytics} {Role}-{Play}},
+@article{adler_negotiating_2007,
+	title = {Negotiating with liars},
+	volume = {48},
 	language = {English},
-	author = {{Program on Negotiation}},
-	editor = {{Harvard Law School}},
-	year = {2008}
+	number = {4},
+	journal = {MIT Sloan Management Review},
+	author = {Adler, Robert S.},
+	year = {2007},
+	pages = {69--79},
 }
 
-@misc{magic_markers_como_2018,
-	title = {¿{Cómo} negociar bien?},
-	url = {https://www.youtube.com/watch?v=CnF26cfIfQM&t=173s},
-	language = {Spanish},
-	urldate = {2020-09-23},
-	author = {{Magic Markers}},
-	year = {2018}
+@article{lewicki_ethical_1998,
+	title = {Ethical and {Unethical} {Bargaining} {Tactics}: {An} {Empirical} {Study}},
+	volume = {18},
+	issn = {01674544},
+	url = {http://link.springer.com/10.1023/A:1005719122519},
+	doi = {10.1023/A:1005719122519},
+	number = {2},
+	urldate = {2020-10-31},
+	journal = {Journal of Business Ethics},
+	author = {Lewicki, Roy J. and Robinson, Robert J.},
+	year = {1998},
+	pages = {211--228},
 }
 
-@techreport{program_of_negotiation_batna_2012,
-	title = {{BATNA} {Basics}: {Boost} {Your} {Power} at the {Bargaining} {Table}},
-	url = {https://www.bc.edu/content/dam/files/centers/cwf/individuals/pdf/BANTABasics.pdf},
+@book{rogers_active_2015,
+	title = {Active listening},
+	isbn = {978-1-61427-872-6},
 	language = {English},
-	author = {{Program of Negotiation}},
-	year = {2012},
-	pages = {8}
+	publisher = {Martino Publishing},
+	author = {Rogers, Carl R and Farson, Richard Evans},
+	year = {2015},
+	note = {OCLC: 1050955193},
 }
 
-@misc{spangler_creating_2003,
-	title = {Creating and {Claiming} {Value}},
-	url = {https://www.beyondintractability.org/essay/creating_value},
+@incollection{coleman_power_2014,
+	edition = {3},
+	title = {Power and {Conflict}},
+	isbn = {978-1-118-81032-3},
 	language = {English},
-	urldate = {2020-09-23},
-	publisher = {Conflict Information Consortium, University of Colorado, Boulder},
-	author = {Spangler, Brad},
-	month = sep,
-	year = {2003},
-	note = {Last Modified: 2017-02-28T14:57-07:00},
-	file = {Snapshot:/home/luifrancgom/Zotero/storage/X9FM2BRV/creating-value.html:text/html}
+	booktitle = {The {Handbook} of {Conflict} {Resolution}: {Theory} and {Practice}},
+	publisher = {Jossey-Bass},
+	author = {Coleman, Peter T.},
+	year = {2014},
+	pages = {137--181},
 }
 
-@book{muthoo_bargaining_1999,
-	address = {New York},
-	title = {Bargaining theory with applications},
-	isbn = {978-0-521-57225-5 978-0-521-57647-5},
-	publisher = {Cambridge University Press},
-	author = {Muthoo, Abhinay},
-	year = {1999},
-	keywords = {Negotiation in business, Game theory}
-}
-
-@misc{program_on_negotiation_negotiation_2014,
-	title = {Negotiation {Role}-{Play}: {Three}-{Party} {Coalition} {Exercise} - {Game} {Theory} \& {Negotiation} {Analytics}},
-	shorttitle = {Negotiation {Role}-{Play}},
-	url = {https://www.youtube.com/watch?v=O2d6XuDm-ok&feature=emb_title},
+@misc{pon_staff_negotiation_2020,
+	title = {Negotiation {Skills} for {Win}-{Win} {Negotiations}},
+	url = {https://www.pon.harvard.edu/daily/negotiation-skills-daily/listening-skills-for-maximum-success/},
 	language = {English},
-	urldate = {2020-10-05},
-	author = {{Program on Negotiation}},
-	month = dec,
-	year = {2014}
+	urldate = {2020-10-27},
+	journal = {PON - Program on Negotiation at Harvard Law School},
+	author = {{PON Staff}},
+	month = oct,
+	year = {2020},
+	note = {Section: Negotiation Skills},
+	file = {Snapshot:/home/usuario/Zotero/storage/3M9E4SD3/listening-skills-for-maximum-success.html:text/html},
 }
 
-@article{rackham_effective_1978,
-	title = {The {Effective} {Negotiator} — {Part} {I}: {The} {Behaviour} of {Successful} {Negotiators}},
-	volume = {2},
-	issn = {0309-0590},
-	shorttitle = {The {Effective} {Negotiator} — {Part} {I}},
-	url = {https://www.emerald.com/insight/content/doi/10.1108/eb002297/full/html},
-	doi = {10.1108/eb002297},
-	language = {en},
-	number = {6},
-	urldate = {2020-10-15},
-	journal = {Journal of European Industrial Training},
-	author = {Rackham, Neil and Carlisle, John},
-	month = jun,
-	year = {1978},
-	pages = {6--11}
-}
-
-@article{rackham_effective_1978-1,
-	title = {The {Effective} {Negotiator} — {Part} 2: {Planning} for {Negotiations}},
-	volume = {2},
-	issn = {0309-0590},
-	shorttitle = {The {Effective} {Negotiator} — {Part} 2},
-	url = {https://www.emerald.com/insight/content/doi/10.1108/eb002302/full/html},
-	doi = {10.1108/eb002302},
-	language = {en},
-	number = {7},
-	urldate = {2020-10-15},
-	journal = {Journal of European Industrial Training},
-	author = {Rackham, Neil and Carlisle, John},
-	month = jul,
-	year = {1978},
-	pages = {2--5}
-}
-
-@misc{adelson_checkershadow_1995,
-	title = {Checkershadow {Illusion}},
-	url = {http://persci.mit.edu/gallery/checkershadow},
-	language = {English},
-	urldate = {2020-10-20},
-	author = {Adelson, Edward H.},
-	year = {1995},
-	file = {Checkershadow Illusion:/home/luifrancgom/Zotero/storage/6MI2BF9J/checkershadow.html:text/html}
-}
-
-@article{zeman_muller-lyer_2013,
-	title = {The {Müller}-{Lyer} {Illusion} in a {Computational} {Model} of {Biological} {Object} {Recognition}},
-	volume = {8},
-	issn = {1932-6203},
-	url = {https://dx.plos.org/10.1371/journal.pone.0056126},
-	doi = {10.1371/journal.pone.0056126},
-	language = {en},
+@article{dimara_task-based_2020,
+	title = {A {Task}-{Based} {Taxonomy} of {Cognitive} {Biases} for {Information} {Visualization}},
+	volume = {26},
+	issn = {1077-2626, 1941-0506, 2160-9306},
+	url = {https://ieeexplore.ieee.org/document/8476234/},
+	doi = {10.1109/TVCG.2018.2872577},
 	number = {2},
 	urldate = {2020-10-21},
-	journal = {PLoS ONE},
-	author = {Zeman, Astrid and Obst, Oliver and Brooks, Kevin R. and Rich, Anina N.},
-	editor = {Paterson, Kevin},
+	journal = {IEEE Transactions on Visualization and Computer Graphics},
+	author = {Dimara, Evanthia and Franconeri, Steven and Plaisant, Catherine and Bezerianos, Anastasia and Dragicevic, Pierre},
 	month = feb,
-	year = {2013},
-	pages = {e56126},
-	file = {Full Text:/home/luifrancgom/Zotero/storage/JL5MJ5MU/Zeman et al. - 2013 - The Müller-Lyer Illusion in a Computational Model .pdf:application/pdf}
-}
-
-@book{luckiesh_visual_2017,
-	title = {Visual illusions: their causes, characteristics and applications},
-	isbn = {978-1-5119-3029-1},
-	shorttitle = {Visual illusions},
-	language = {English},
-	author = {Luckiesh, Matthew},
-	year = {2017},
-	note = {OCLC: 989058911}
-}
-
-@book{bateson_steps_2000,
-	address = {Chicago},
-	edition = {University of Chicago Press ed},
-	title = {Steps to an ecology of mind},
-	isbn = {978-0-226-03906-0 978-0-226-03905-3},
-	publisher = {University of Chicago Press},
-	author = {Bateson, Gregory},
-	year = {2000},
-	keywords = {Anthropology, Evolution, Knowledge, Theory of, Psychiatry},
-	annote = {Originally published: San Francisco : Chandler Pub. Co., 1972. With new foreword}
-}
-
-@book{goffman_frame_1986,
-	address = {Boston},
-	edition = {Northeastern University Press ed},
-	title = {Frame analysis: an essay on the organization of experience},
-	isbn = {978-0-930350-91-8},
-	shorttitle = {Frame analysis},
-	publisher = {Northeastern University Press},
-	author = {Goffman, Erving},
-	year = {1986},
-	keywords = {Social interaction, Social psychology},
-	annote = {Reprint. Originally published: New York : Harper \& Row, 1974}
-}
-
-@article{tversky_framing_1981,
-	title = {The framing of decisions and the psychology of choice},
-	volume = {211},
-	issn = {0036-8075, 1095-9203},
-	url = {https://www.sciencemag.org/lookup/doi/10.1126/science.7455683},
-	doi = {10.1126/science.7455683},
-	language = {en},
-	number = {4481},
-	urldate = {2020-10-21},
-	journal = {Science},
-	author = {Tversky, A and Kahneman, D},
-	month = jan,
-	year = {1981},
-	pages = {453--458},
-	file = {Submitted Version:/home/luifrancgom/Zotero/storage/7T6RMMEW/Tversky and Kahneman - 1981 - The framing of decisions and the psychology of cho.pdf:application/pdf}
-}
-
-@misc{shonk_framing_2020,
-	title = {Framing in {Negotiation}},
-	url = {https://www.pon.harvard.edu/daily/business-negotiations/framing-in-negotiation/},
-	abstract = {For successful framing in negotiation, offer manageable options to your counterpart, present several offers at the same time, and take advantage of the contrast effect.},
-	language = {en-US},
-	urldate = {2020-10-21},
-	journal = {PON - Program on Negotiation at Harvard Law School},
-	author = {Shonk, Katie},
-	month = jun,
 	year = {2020},
-	note = {Section: Business Negotiations},
-	file = {Snapshot:/home/luifrancgom/Zotero/storage/5L7IBL3N/framing-in-negotiation.html:text/html}
+	pages = {1413--1432},
+	file = {Submitted Version:/home/usuario/Zotero/storage/7TRG3UHX/Dimara et al. - 2020 - A Task-Based Taxonomy of Cognitive Biases for Info.pdf:application/pdf},
+}
+
+@article{simonson_choice_1992,
+	title = {Choice in {Context}: {Tradeoff} {Contrast} and {Extremeness} {Aversion}},
+	volume = {29},
+	issn = {00222437},
+	shorttitle = {Choice in {Context}},
+	url = {https://www.jstor.org/stable/3172740?origin=crossref},
+	doi = {10.2307/3172740},
+	number = {3},
+	urldate = {2020-10-21},
+	journal = {Journal of Marketing Research},
+	author = {Simonson, Itamar and Tversky, Amos},
+	month = aug,
+	year = {1992},
+	pages = {281},
+}
+
+@article{leonardelli_multiple_2019,
+	title = {Multiple equivalent simultaneous offers ({MESOs}) reduce the negotiator dilemma: {How} a choice of first offers increases economic and relational outcomes},
+	volume = {152},
+	issn = {07495978},
+	shorttitle = {Multiple equivalent simultaneous offers ({MESOs}) reduce the negotiator dilemma},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S074959781630557X},
+	doi = {10.1016/j.obhdp.2019.01.007},
+	language = {en},
+	urldate = {2020-10-21},
+	journal = {Organizational Behavior and Human Decision Processes},
+	author = {Leonardelli, Geoffrey J. and Gu, Jun and McRuer, Geordie and Medvec, Victoria Husted and Galinsky, Adam D.},
+	month = may,
+	year = {2019},
+	pages = {64--83},
 }
 
 @article{iyengar_when_2000,
@@ -213,113 +122,214 @@
 	month = dec,
 	year = {2000},
 	pages = {995--1006},
-	file = {Full Text:/home/luifrancgom/Zotero/storage/JM8GWI9L/Iyengar and Lepper - 2000 - When choice is demotivating Can one desire too mu.pdf:application/pdf}
+	file = {Full Text:/home/usuario/Zotero/storage/JM8GWI9L/Iyengar and Lepper - 2000 - When choice is demotivating Can one desire too mu.pdf:application/pdf},
 }
 
-@article{leonardelli_multiple_2019,
-	title = {Multiple equivalent simultaneous offers ({MESOs}) reduce the negotiator dilemma: {How} a choice of first offers increases economic and relational outcomes},
-	volume = {152},
-	issn = {07495978},
-	shorttitle = {Multiple equivalent simultaneous offers ({MESOs}) reduce the negotiator dilemma},
-	url = {https://linkinghub.elsevier.com/retrieve/pii/S074959781630557X},
-	doi = {10.1016/j.obhdp.2019.01.007},
-	language = {en},
+@misc{shonk_framing_2020,
+	title = {Framing in {Negotiation}},
+	url = {https://www.pon.harvard.edu/daily/business-negotiations/framing-in-negotiation/},
+	abstract = {For successful framing in negotiation, offer manageable options to your counterpart, present several offers at the same time, and take advantage of the contrast effect.},
+	language = {en-US},
 	urldate = {2020-10-21},
-	journal = {Organizational Behavior and Human Decision Processes},
-	author = {Leonardelli, Geoffrey J. and Gu, Jun and McRuer, Geordie and Medvec, Victoria Husted and Galinsky, Adam D.},
-	month = may,
-	year = {2019},
-	pages = {64--83}
-}
-
-@article{simonson_choice_1992,
-	title = {Choice in {Context}: {Tradeoff} {Contrast} and {Extremeness} {Aversion}},
-	volume = {29},
-	issn = {00222437},
-	shorttitle = {Choice in {Context}},
-	url = {https://www.jstor.org/stable/3172740?origin=crossref},
-	doi = {10.2307/3172740},
-	number = {3},
-	urldate = {2020-10-21},
-	journal = {Journal of Marketing Research},
-	author = {Simonson, Itamar and Tversky, Amos},
-	month = aug,
-	year = {1992},
-	pages = {281}
-}
-
-@article{dimara_task-based_2020,
-	title = {A {Task}-{Based} {Taxonomy} of {Cognitive} {Biases} for {Information} {Visualization}},
-	volume = {26},
-	issn = {1077-2626, 1941-0506, 2160-9306},
-	url = {https://ieeexplore.ieee.org/document/8476234/},
-	doi = {10.1109/TVCG.2018.2872577},
-	number = {2},
-	urldate = {2020-10-21},
-	journal = {IEEE Transactions on Visualization and Computer Graphics},
-	author = {Dimara, Evanthia and Franconeri, Steven and Plaisant, Catherine and Bezerianos, Anastasia and Dragicevic, Pierre},
-	month = feb,
-	year = {2020},
-	pages = {1413--1432},
-	file = {Submitted Version:/home/luifrancgom/Zotero/storage/7TRG3UHX/Dimara et al. - 2020 - A Task-Based Taxonomy of Cognitive Biases for Info.pdf:application/pdf}
-}
-
-@misc{pon_staff_negotiation_2020,
-	title = {Negotiation {Skills} for {Win}-{Win} {Negotiations}},
-	url = {https://www.pon.harvard.edu/daily/negotiation-skills-daily/listening-skills-for-maximum-success/},
-	language = {English},
-	urldate = {2020-10-27},
 	journal = {PON - Program on Negotiation at Harvard Law School},
-	author = {{PON Staff}},
-	month = oct,
+	author = {Shonk, Katie},
+	month = jun,
 	year = {2020},
-	note = {Section: Negotiation Skills},
-	file = {Snapshot:/home/luifrancgom/Zotero/storage/3M9E4SD3/listening-skills-for-maximum-success.html:text/html}
+	note = {Section: Business Negotiations},
+	file = {Snapshot:/home/usuario/Zotero/storage/5L7IBL3N/framing-in-negotiation.html:text/html},
 }
 
-@book{rogers_active_2015,
-	title = {Active listening},
-	isbn = {978-1-61427-872-6},
+@article{tversky_framing_1981,
+	title = {The framing of decisions and the psychology of choice},
+	volume = {211},
+	issn = {0036-8075, 1095-9203},
+	url = {https://www.sciencemag.org/lookup/doi/10.1126/science.7455683},
+	doi = {10.1126/science.7455683},
+	language = {en},
+	number = {4481},
+	urldate = {2020-10-21},
+	journal = {Science},
+	author = {Tversky, A and Kahneman, D},
+	month = jan,
+	year = {1981},
+	pages = {453--458},
+	file = {Submitted Version:/home/usuario/Zotero/storage/7T6RMMEW/Tversky and Kahneman - 1981 - The framing of decisions and the psychology of cho.pdf:application/pdf},
+}
+
+@book{goffman_frame_1986,
+	address = {Boston},
+	edition = {Northeastern University Press ed},
+	title = {Frame analysis: an essay on the organization of experience},
+	isbn = {978-0-930350-91-8},
+	shorttitle = {Frame analysis},
+	publisher = {Northeastern University Press},
+	author = {Goffman, Erving},
+	year = {1986},
+	keywords = {Social interaction, Social psychology},
+	annote = {Reprint. Originally published: New York : Harper \& Row, 1974},
+}
+
+@book{bateson_steps_2000,
+	address = {Chicago},
+	edition = {University of Chicago Press ed},
+	title = {Steps to an ecology of mind},
+	isbn = {978-0-226-03906-0 978-0-226-03905-3},
+	publisher = {University of Chicago Press},
+	author = {Bateson, Gregory},
+	year = {2000},
+	keywords = {Anthropology, Evolution, Knowledge, Theory of, Psychiatry},
+	annote = {Originally published: San Francisco : Chandler Pub. Co., 1972. With new foreword},
+}
+
+@book{luckiesh_visual_2017,
+	title = {Visual illusions: their causes, characteristics and applications},
+	isbn = {978-1-5119-3029-1},
+	shorttitle = {Visual illusions},
 	language = {English},
-	publisher = {Martino Publishing},
-	author = {Rogers, Carl R and Farson, Richard Evans},
-	year = {2015},
-	note = {OCLC: 1050955193}
+	author = {Luckiesh, Matthew},
+	year = {2017},
+	note = {OCLC: 989058911},
 }
 
-@incollection{coleman_power_2014,
-	edition = {3},
-	title = {Power and {Conflict}},
-	isbn = {978-1-118-81032-3},
-	language = {English},
-	booktitle = {The {Handbook} of {Conflict} {Resolution}: {Theory} and {Practice}},
-	publisher = {Jossey-Bass},
-	author = {Coleman, Peter T.},
-	year = {2014},
-	pages = {137--181}
-}
-
-@article{lewicki_ethical_1998,
-	title = {Ethical and {Unethical} {Bargaining} {Tactics}: {An} {Empirical} {Study}},
-	volume = {18},
-	issn = {01674544},
-	url = {http://link.springer.com/10.1023/A:1005719122519},
-	doi = {10.1023/A:1005719122519},
+@article{zeman_muller-lyer_2013,
+	title = {The {Müller}-{Lyer} {Illusion} in a {Computational} {Model} of {Biological} {Object} {Recognition}},
+	volume = {8},
+	issn = {1932-6203},
+	url = {https://dx.plos.org/10.1371/journal.pone.0056126},
+	doi = {10.1371/journal.pone.0056126},
+	language = {en},
 	number = {2},
-	urldate = {2020-10-31},
-	journal = {Journal of Business Ethics},
-	author = {Lewicki, Roy J. and Robinson, Robert J.},
-	year = {1998},
-	pages = {211--228}
+	urldate = {2020-10-21},
+	journal = {PLoS ONE},
+	author = {Zeman, Astrid and Obst, Oliver and Brooks, Kevin R. and Rich, Anina N.},
+	editor = {Paterson, Kevin},
+	month = feb,
+	year = {2013},
+	pages = {e56126},
+	file = {Full Text:/home/usuario/Zotero/storage/JL5MJ5MU/Zeman et al. - 2013 - The Müller-Lyer Illusion in a Computational Model .pdf:application/pdf},
 }
 
-@article{adler_negotiating_2007,
-	title = {Negotiating with liars},
-	volume = {48},
+@misc{adelson_checkershadow_1995,
+	title = {Checkershadow {Illusion}},
+	url = {http://persci.mit.edu/gallery/checkershadow},
 	language = {English},
-	number = {4},
-	journal = {MIT Sloan Management Review},
-	author = {Adler, Robert S.},
-	year = {2007},
-	pages = {69--79}
+	urldate = {2020-10-20},
+	author = {Adelson, Edward H.},
+	year = {1995},
+	file = {Checkershadow Illusion:/home/usuario/Zotero/storage/6MI2BF9J/checkershadow.html:text/html},
+}
+
+@article{rackham_effective_1978,
+	title = {The {Effective} {Negotiator} — {Part} 2: {Planning} for {Negotiations}},
+	volume = {2},
+	issn = {0309-0590},
+	shorttitle = {The {Effective} {Negotiator} — {Part} 2},
+	url = {https://www.emerald.com/insight/content/doi/10.1108/eb002302/full/html},
+	doi = {10.1108/eb002302},
+	language = {en},
+	number = {7},
+	urldate = {2020-10-15},
+	journal = {Journal of European Industrial Training},
+	author = {Rackham, Neil and Carlisle, John},
+	month = jul,
+	year = {1978},
+	pages = {2--5},
+}
+
+@article{rackham_effective_1978-1,
+	title = {The {Effective} {Negotiator} — {Part} {I}: {The} {Behaviour} of {Successful} {Negotiators}},
+	volume = {2},
+	issn = {0309-0590},
+	shorttitle = {The {Effective} {Negotiator} — {Part} {I}},
+	url = {https://www.emerald.com/insight/content/doi/10.1108/eb002297/full/html},
+	doi = {10.1108/eb002297},
+	language = {en},
+	number = {6},
+	urldate = {2020-10-15},
+	journal = {Journal of European Industrial Training},
+	author = {Rackham, Neil and Carlisle, John},
+	month = jun,
+	year = {1978},
+	pages = {6--11},
+}
+
+@misc{program_on_negotiation_negotiation_2014,
+	title = {Negotiation {Role}-{Play}: {Three}-{Party} {Coalition} {Exercise} - {Game} {Theory} \& {Negotiation} {Analytics}},
+	shorttitle = {Negotiation {Role}-{Play}},
+	url = {https://www.youtube.com/watch?v=O2d6XuDm-ok&feature=emb_title},
+	language = {English},
+	urldate = {2020-10-05},
+	author = {{Program on Negotiation}},
+	month = dec,
+	year = {2014},
+}
+
+@misc{program_on_negotiation_three_2008,
+	title = {Three {Party} {Coalition} {Exercise} - {Game} {Theory} and {Negotiation} {Analytics} {Role}-{Play}},
+	language = {English},
+	author = {{Program on Negotiation}},
+	editor = {{Harvard Law School}},
+	year = {2008},
+}
+
+@book{muthoo_bargaining_1999,
+	address = {New York},
+	title = {Bargaining theory with applications},
+	isbn = {978-0-521-57225-5 978-0-521-57647-5},
+	publisher = {Cambridge University Press},
+	author = {Muthoo, Abhinay},
+	year = {1999},
+	keywords = {Game theory, Negotiation in business},
+}
+
+@misc{spangler_creating_2003,
+	title = {Creating and {Claiming} {Value}},
+	url = {https://www.beyondintractability.org/essay/creating_value},
+	language = {English},
+	urldate = {2020-09-23},
+	publisher = {Conflict Information Consortium, University of Colorado, Boulder},
+	author = {Spangler, Brad},
+	month = sep,
+	year = {2003},
+	note = {Last Modified: 2017-02-28T14:57-07:00},
+	file = {Snapshot:/home/usuario/Zotero/storage/X9FM2BRV/creating-value.html:text/html},
+}
+
+@techreport{program_of_negotiation_batna_2012,
+	title = {{BATNA} {Basics}: {Boost} {Your} {Power} at the {Bargaining} {Table}},
+	url = {https://www.bc.edu/content/dam/files/centers/cwf/individuals/pdf/BANTABasics.pdf},
+	language = {English},
+	author = {{Program of Negotiation}},
+	year = {2012},
+	pages = {8},
+}
+
+@misc{magic_markers_como_2018,
+	title = {¿{Cómo} negociar bien?},
+	url = {https://www.youtube.com/watch?v=CnF26cfIfQM&t=173s},
+	language = {Spanish},
+	urldate = {2020-09-23},
+	author = {{Magic Markers}},
+	year = {2018},
+}
+
+@book{lewicki_essentials_2016,
+	address = {Dubuque},
+	edition = {Sixth Edition},
+	title = {Essentials of negotiation},
+	isbn = {978-0-07-786246-6},
+	publisher = {McGraw-Hill Education},
+	author = {Lewicki, Roy J. and Barry, Bruce and Saunders, David M.},
+	year = {2016},
+	keywords = {Negotiation in business, Negotiation},
+}
+
+@misc{program_on_negotiation_negotiation_2014-1,
+	title = {Negotiation {Role}-{Play}: {Three}-{Party} {Coalition} {Exercise} - {Game} {Theory} \& {Negotiation} {Analytics}},
+	shorttitle = {Negotiation {Role}-{Play}},
+	url = {https://www.youtube.com/watch?v=oaOv_iXOvtY},
+	urldate = {2021-04-05},
+	author = {{Program on Negotiation}},
+	month = sep,
+	year = {2014},
 }
