--- a/005_per_cog_emo.Rmd
+++ b/005_per_cog_emo.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Perception, Cognition, and Emotion"
 author: "Luis Francisco Gomez Lopez"
-date: 2020-10-20
+date: 2021-04-05 11:18:09 GMT -05:00
 output:
   beamer_presentation:
     colortheme: dolphin
