--- a/003_stra_tac_integra_round_1.Rmd
+++ b/003_stra_tac_integra_round_1.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Strategy and Tactics of Integrative Negotiation and Three-Party Coalition Exercise Round 1"
 author: "Luis Francisco Gomez Lopez"
-date: 2021-04-05 10:36:49 GMT -05:00
+date: 2021-09-09 17:36:17
 output:
   beamer_presentation:
     colortheme: dolphin
