--- a/004_stra_plan.Rmd
+++ b/004_stra_plan.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Negotiation: Strategy and Planning"
 author: "Luis Francisco Gomez Lopez"
-date: 2021-04-05 11:12:53 GMT -05:00
+date: 2021-09-09 17:39:23
 output:
   beamer_presentation:
     colortheme: dolphin
