--- a/007_power.Rmd
+++ b/007_power.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Finding and Using Negotiation Power"
 author: "Luis Francisco Gomez Lopez"
-date: 2021-04-05 11:33:46 GMT -05:00
+date: 2021-09-09 17:44:21
 output:
   beamer_presentation:
     colortheme: dolphin
