--- a/008_ethics.Rmd
+++ b/008_ethics.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Ethics in Negotiation"
 author: "Luis Francisco Gomez Lopez"
-date: 2021-04-05 11:41:20 GMT -05:00
+date: 2021-09-09 17:44:46
 output:
   beamer_presentation:
     colortheme: dolphin
