--- a/009_best_practices.Rmd
+++ b/009_best_practices.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Best Practices in Negotiations"
 author: "Luis Francisco Gomez Lopez"
-date: 2021-04-05 11:48:11 GMT -05:00
+date: 2021-09-09 17:45:55
 output:
   beamer_presentation:
     colortheme: dolphin
